# python_dhcp_server

./: .gitignore  LICENSE  README.md  dhcp.py  dhcp.quelltext.eu.pfx  dhcpgui.py  dhcpgui.pyw  listener.py  pyinstaller-macos.spec  pyinstaller-windows.spec  pyproject.toml  python_dhcp_server.desktop  tox.ini
.github/: FUNDING.yml
.github/workflows/: hugo.yml  run-tests.yml
dhcp_server/: __init__.py  __main__.py  dhcp.py  listener.py  python-dhcp-server-qt.yml  qt.py  tk.py
docs/: hugo.yml
docs/config/_default/: hugo.yml  languages.de.yml  languages.en.yml  languages.fr.yml
docs/content/: _index.de.md  _index.fr.md  _index.md
docs/content/changes/: _index.md
docs/content/contribute/: _index.de.md  _index.fr.md  _index.md
docs/content/develop/: _index.md
docs/content/development/: _index.md
docs/content/install/: _index.de.md  _index.fr.md  _index.md  linux.de.md  linux.fr.md  linux.md  macos.de.md  macos.fr.md  macos.md  source.de.md  source.fr.md  source.md  windows.de.md  windows.md
docs/content/usage/: _index.de.md  _index.fr.md  _index.md  cmd.de.md  cmd.fr.md  cmd.md
docs/layouts/partials/: custom-header.html
docs/static/: CNAME
flatpak/: inside.sh  io.github.niccokunzmann.python_dhcp_server.xml  python_dhcp_server
pyinstaller/: windows.spec
server/: dhcp.py  dhcpgui.conf  dhcpgui.pyw  listener.py
simple_dhcp_server/: __init__.py  icon.icns  linux-start-gui.sh  macos.py  qt.py  tk.py
standalone/: DHCPGui.cpp
